[gd_scene load_steps=8 format=3 uid="uid://60lvgm4utq4j"]

[ext_resource type="PackedScene" uid="uid://dkxqj3l0xm8uw" path="res://creator/selection/inspector/categories/inspector_category_base.tscn" id="1_wr3pn"]
[ext_resource type="Script" path="res://creator/selection/inspector/categories/inspector_object.gd" id="2_08jxy"]
[ext_resource type="PackedScene" uid="uid://cyf8lr874knjd" path="res://creator/selection/inspector/primitive/inspector_line_edit_field.tscn" id="3_l2xgs"]
[ext_resource type="PackedScene" uid="uid://cdctwmtu1ot17" path="res://creator/selection/inspector/primitive/inspector_bool.tscn" id="4_1q828"]
[ext_resource type="PackedScene" uid="uid://cux00rc5b2cu6" path="res://creator/selection/inspector/primitive/inspector_text_field.tscn" id="4_1xbe6"]
[ext_resource type="PackedScene" uid="uid://dm136o3efeoqo" path="res://creator/selection/inspector/primitive/inspector_asset.tscn" id="4_qpmmi"]
[ext_resource type="PackedScene" uid="uid://q0ej2myktxhq" path="res://creator/selection/inspector/primitive/inspector_button.tscn" id="5_vsf3c"]

[node name="InspectorObject" instance=ExtResource("1_wr3pn")]
offset_bottom = 418.0
script = ExtResource("2_08jxy")

[node name="ToggleButton" parent="CategoryTitle" index="0" node_paths=PackedStringArray("properties")]
properties = NodePath("../../Properties")

[node name="Text" parent="CategoryTitle/ToggleButton/Name" index="3"]
text = "OBJECT"

[node name="Properties" parent="." index="1"]
visible = true

[node name="Name" parent="Properties/MarginContainer/PropertyList" index="0" instance=ExtResource("3_l2xgs")]
layout_mode = 2
label_text = "Name"

[node name="Description" parent="Properties/MarginContainer/PropertyList" index="1" instance=ExtResource("4_1xbe6")]
layout_mode = 2
label_text = "Description"

[node name="Label" parent="Properties/MarginContainer/PropertyList/Description/LabelHolder" index="0"]
text = "Description"

[node name="TextEdit" parent="Properties/MarginContainer/PropertyList/Description/TextEditHolder" index="0"]
custom_minimum_size = Vector2(0, 70)
theme_override_font_sizes/font_size = 12
wrap_mode = 1

[node name="Creator" parent="Properties/MarginContainer/PropertyList" index="2" instance=ExtResource("5_vsf3c")]
layout_mode = 2
button_text = "Loading..."
enabled = true
label_text = "Creator"

[node name="LabelHolder" parent="Properties/MarginContainer/PropertyList/Creator" index="0"]
size_flags_stretch_ratio = 0.75

[node name="Label" parent="Properties/MarginContainer/PropertyList/Creator/LabelHolder" index="0"]
text = "Creator"

[node name="MainButton" parent="Properties/MarginContainer/PropertyList/Creator" index="1"]
text = "Loading..."
text_overrun_behavior = 3

[node name="Asset" parent="Properties/MarginContainer/PropertyList" index="3" instance=ExtResource("4_qpmmi")]
layout_mode = 2
label_text = "Asset"

[node name="Locked" parent="Properties/MarginContainer/PropertyList" index="4" instance=ExtResource("4_1q828")]
layout_mode = 2
label_text = "Locked"

[node name="Damageable" parent="Properties/MarginContainer/PropertyList" index="5" instance=ExtResource("4_1q828")]
layout_mode = 2
label_text = "Damageable"

[connection signal="value_changed" from="Properties/MarginContainer/PropertyList/Name" to="." method="_on_name_value_changed"]
[connection signal="value_changed" from="Properties/MarginContainer/PropertyList/Description" to="." method="_on_description_value_changed"]
[connection signal="inspector_button_pressed" from="Properties/MarginContainer/PropertyList/Creator" to="." method="_on_creator_inspector_button_pressed"]
[connection signal="asset_clicked" from="Properties/MarginContainer/PropertyList/Asset" to="." method="_on_asset_asset_clicked"]
[connection signal="value_changed" from="Properties/MarginContainer/PropertyList/Locked" to="." method="_on_locked_value_changed"]
[connection signal="value_changed" from="Properties/MarginContainer/PropertyList/Damageable" to="." method="_on_damageable_value_changed"]

[editable path="Properties/MarginContainer/PropertyList/Description"]
[editable path="Properties/MarginContainer/PropertyList/Creator"]
